# phoenix-benchmark

./: .gitignore  Cargo.toml  README.md  dusk_wallet_core.wasm
src/: download-state.rs  lib.rs  main.rs  new-sync.rs  new.rs  nop.rs  old.rs
wasm-bench/: Cargo.toml  index.html
wasm-bench/src/: lib.rs
